# pipier

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  tests.rest
pipier/: Cargo.toml
pipier/src/: error.rs  jq.rs  main.rs  parsing.rs
