[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["jrx <jerome+git@eventuallyconsultant.com>"]
repository = "https://github.com/eventuallyconsultant/pipier"


[workspace]
resolver = "2"
default-members = ["pipier"]

members = ["pipier"]

[workspace.dependencies]
# MISC
pretty_env_logger = "0.5"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7" }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

http = "1"
# jq
jaq-core = "1.2"
jaq-std = "1.2"
jaq-interpret = "1.2"
jaq-parse = "1.0"
jaq-syn = "1.1"

# OTHERS 
serde = { version = "1" }
serde_json = "1"
